Added JS_text for selector. Replaced component in app-nav-tabs

--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -28,15 +28,8 @@
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell itemBox__cell--permalink">
             <div class="itemBox__cellInner ">
-
-              <div class="selector selector--expanded">
-                <div class="selector__item JS_selectorItem--active selector__item--selected">
-                  <div class="selector__block">
-                    <div class="selector__blockPart selector__blockPart--field JS_text" title="{{item}}">{{item}}</div>
-                  </div>
-                </div>
-              </div>
-
+              {% assign selectorData = ",,," | append: item %}
+              {% include components/selector.html selectorData=selectorData expanded="true" selectedIndexes="1" %}
             </div>
           </li>
         </ul>
