--- a/_includes/components/selector.html
+++ b/_includes/components/selector.html
@@ -80,7 +80,7 @@
         {% if labelSize > 0 %}
           <div class="selector__blockSeperator"></div>
         {% endif %}
-        <div class="selector__blockPart selector__blockPart--field">{{field}}</div>
+        <div class="selector__blockPart selector__blockPart--field JS_text">{{field}}</div>
       {% endif %}
     </div>
   </div>
