--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -3,13 +3,7 @@
   <div class="header__title">
     <div class="header__type header__type--bug">
       <div class="header__label header__label--bug">
-        <div class="selector selector--expanded ">
-          <div class="selector__item JS_selectorItem--active selector__item--selected">
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--label">Bug</div>
-            </div>
-          </div>
-        </div>
+        {% include components/selector.html selectorData=",,Bug," expanded="true" selectedIndexes="1" %}
       </div>
       <span class="header__id">391441</span>
     </div>
@@ -20,14 +14,7 @@
     <div class="block-action disabled"></div>
     <div class="block-action"><sup></sup></div>
     <div class="block-action readonly">
-
-      <div class="selector selector--expanded">
-        <div class="selector__item JS_selectorItem--active selector__item--selected">
-          <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
-          </div>
-        </div>
-      </div>
+      {% include components/selector.html selectorData=",,,Ongoing" expanded="true" selectedIndexes="1" %}
 
     </div>
     <div class="block-action readonly">
