Calendar: removed selectors

--- a/_includes/blocks/popup/calendar/ms-calendar-header.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-header.html
@@ -1,41 +1,22 @@
 <ul class="itemBox__row">
   <li class="itemBox__cell">
     <div class="itemBox__cellInner">
-
-      <div class="selector selector--expanded">
-        <div class="selector__item JS_selectorItem--active selector__item--selected">
-          <div class="selector__block ">
-            <div class="selector__blockPart selector__blockPart--field">←</div>
-          </div>
-        </div>
-      </div>
-
+      <div class="itemBox__action">←</div>
     </div>
   </li>
   <li class="itemBox__cell text-center">
     <div class="itemBox__cellInner">
-
-      <div class="selector">
-        <div class="selector__item JS_selectorItem--active selector__item--selected">
-          <div class="selector__block ">
-            <div class="selector__blockPart selector__blockPart--field">April</div>
-          </div>
-        </div>
-      </div>
-
+      <div class="itemBox__action">April</div>
+    </div>
+  </li>
+  <li class="itemBox__cell text-center">
+    <div class="itemBox__cellInner">
+      <div class="itemBox__action">2018</div>
     </div>
   </li>
   <li class="itemBox__cell text-right">
     <div class="itemBox__cellInner">
-
-      <div class="selector selector--expanded">
-        <div class="selector__item JS_selectorItem--active selector__item--selected">
-          <div class="selector__block ">
-            <div class="selector__blockPart selector__blockPart--field">→</div>
-          </div>
-        </div>
-      </div>
-
+      <div class="itemBox__action">→</div>
     </div>
   </li>
 </ul>
