--- a/_includes/blocks/popup/ms-sublist-options.html
+++ b/_includes/blocks/popup/ms-sublist-options.html
@@ -1,4 +1,4 @@
-<div class="itemBox JS_itemBox--children JS_itemBox--children JS_itemBox--children-sublist itemBox--sublist JS_itemBox--columnpickerOptions JS_children-closed" style="display: none;">
+<div class="itemBox JS_itemBox--children JS_itemBox--children JS_itemBox--sublist itemBox--sublist JS_itemBox--columnpickerOptions JS_children-closed" style="display: none;">
   {% for item in site.data.ms-options.items %}
   <ul class="itemBox__row itemBox__row--item">
     <li class="itemBox__cell">
