--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -178,14 +178,14 @@
         box-shadow: 0 2px 8px -2px rgba(0,0,0,.7);
       }
     }
-
-    &.selector--expanded {
-      .selector__item {
-        &--selected {
-          pointer-events: none;
-        }
-      }
-    }
+    // 
+    // &.selector--expanded {
+    //   .selector__item {
+    //     &--selected {
+    //       pointer-events: none;
+    //     }
+    //   }
+    // }
   }
 
   &--multiselect {
