Replacing selectors with component

--- a/_includes/blocks/popup/ms-sublist-options.html
+++ b/_includes/blocks/popup/ms-sublist-options.html
@@ -10,7 +10,7 @@
             </div>
           </div>
           <div class="selector__itemSeperator"></div>
-          <div class="selector__item JS_selectorItem JS_selectorItem--active JS_selectorItem--active selector__item--selected">
+          <div class="selector__item JS_selectorItem JS_selectorItem--active selector__item--selected">
             <div class="selector__block ">
               <div class="selector__blockPart selector__blockPart--field"></div>
             </div>
