--- a/_includes/javascript/and-or-selector.html
+++ b/_includes/javascript/and-or-selector.html
@@ -1,13 +1,1 @@
-  <div class="selector selector--singleselect selector--expanded JS_selector">
-    <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-      <div class="selector__block">
-        <div class="selector__blockPart selector__blockPart--label">Or</div>
-      </div>
-    </div>
-    <div class="selector__itemSeperator"></div>
-    <div class="selector__item JS_selectorItem">
-      <div class="selector__block">
-        <div class="selector__blockPart selector__blockPart--label">And</div>
-      </div>
-    </div>
-  </div>
+{% include components/selector.html selectorData=",,Or,;,,And," expanded="true" singleselect="true" selectedIndexes="1" %}
