Still replacing selectors with component

--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -22,16 +22,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
-
-            <div class="selector selector--expanded">
-              <div class="selector__item JS_selectorItem--active selector__item--selected">
-                <div class="selector__block">
-                  <span class="selector__blockPart selector__blockPart--label">Any</span>
-                  <span class="selector__blockSeperator"></span>
-                  <span class="selector__blockPart selector__blockPart--field">Typed keyword</span>
-                </div>
-              </div>
-            </div>
+            {% include components/selector.html selectorData=",,Any,Typed keyword" expanded="true" selectedIndexes="1" %}
 
           </div>
         </div>
@@ -42,16 +33,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
-
-            <div class="selector selector--expanded">
-              <div class="selector__item JS_selectorItem--active selector__item--selected">
-                <div class="selector__block">
-                  <span class="selector__blockPart selector__blockPart--label">title</span>
-                  <span class="selector__blockSeperator"></span>
-                  <span class="selector__blockPart selector__blockPart--field">Enhance logon formula for listly</span>
-                </div>
-              </div>
-            </div>
+            {% include components/selector.html selectorData=",,title,Enhance login formula for listly" expanded="true" selectedIndexes="1" %}
 
           </div>
         </div>
@@ -62,16 +44,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
-
-            <div class="selector selector--expanded">
-              <div class="selector__item JS_selectorItem--active selector__item--selected">
-                <div class="selector__block">
-                  <span class="selector__blockPart selector__blockPart--label">Assigned to</span>
-                  <span class="selector__blockSeperator"></span>
-                  <span class="selector__blockPart selector__blockPart--field">Nick De Jaeger</span>
-                </div>
-              </div>
-            </div>
+            {% include components/selector.html selectorData=",,Assigned to,Nick De Jaeger keyword" expanded="true" selectedIndexes="1" %}
 
           </div>
         </div>
@@ -82,17 +55,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
-
-            <div class="selector selector--expanded">
-              <div class="selector__item JS_selectorItem--active selector__item--selected">
-                <div class="selector__block">
-                  <span class="selector__blockPart selector__blockPart--label">Priority</span>
-                  <span class="selector__blockSeperator"></span>
-                  <span class="selector__blockPart selector__blockPart--field">Critical</span>
-                </div>
-              </div>
-            </div>
-
+            {% include components/selector.html selectorData=",,Priority,Critical" expanded="true" selectedIndexes="1" %}
           </div>
         </div>
       </li>
