--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -36,14 +36,8 @@
                 <div class="itemBox__value">
 
                   {% include javascript/colorToggle.html color=item.color %}
-
-                  <div class="selector selector--expanded">
-                    <div class="selector__item JS_selectorItem--active selector__item--selected">
-                      <div class="selector__block">
-                        <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
-                      </div>
-                    </div>
-                  </div>
+                  {% assign selectorData = ",,," | append: item.name %}
+                  {% include components/selector.html selectorData=selectorData expanded="true" selectedIndexes="1" %}
 
                 </div>
               </div>
@@ -90,14 +84,8 @@
               <div class="itemBox__value">
 
                 {% include javascript/colorToggle.html color=item.color %}
-
-                <div class="selector selector--expanded">
-                  <div class="selector__item JS_selectorItem--active selector__item--selected">
-                    <div class="selector__block">
-                      <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
-                    </div>
-                  </div>
-                </div>
+                {% assign selectorData = ",,," | append: item.name %}
+                {% include components/selector.html selectorData=selectorData expanded="true" selectedIndexes="1" %}
 
               </div>
             </div>
