--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -55,13 +55,8 @@
                 <div class="itemBox__cellInner ">
                   <div class="itemBox__value">
 
-                    <div class="selector selector--expanded">
-                      <div class="selector__item JS_selectorItem--active selector__item--selected">
-                        <div class="selector__block">
-                          <div class="selector__blockPart selector__blockPart--field JS_text">{{item}}</div>
-                        </div>
-                      </div>
-                    </div>
+                    {% assign selectorData = ",,," | append: item %}
+                    {% include components/selector.html selectorData=selectorData expanded="true" selectedIndexes="1" %}
 
                   </div>
                 </div>
@@ -103,13 +98,8 @@
             <div class="itemBox__value">
 
               {% include blocks/popup/selector-include-exclude.html selected="include"%}
-              <div class="selector selector--expanded">
-                <div class="selector__item JS_selectorItem--active selector__item--selected">
-                  <div class="selector__block">
-                    <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
-                  </div>
-                </div>
-              </div>
+              {% assign selectorData = ",,," | append: item.name %}
+              {% include components/selector.html selectorData=selectorData expanded="true" selectedIndexes="1" %}
 
             </div>
           </div>
