--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -3,7 +3,7 @@
   <div class="header__title">
     <div class="header__type header__type--bug">
       <div class="header__label header__label--bug">
-        {% include components/selector.html selectorData=",,Bug," expanded="true" selectedIndexes="1" %}
+        {% include components/selector.html selectorData=",,Bug," expanded="true"  singleselect="true" readonly="true" selectedIndexes="1" %}
       </div>
       <span class="header__id">391441</span>
     </div>
@@ -14,7 +14,7 @@
     <div class="block-action disabled"></div>
     <div class="block-action"><sup></sup></div>
     <div class="block-action readonly">
-      {% include components/selector.html selectorData=",,,Ongoing" expanded="true" selectedIndexes="1" %}
+      {% include components/selector.html selectorData=",,,Ongoing" expanded="true"  singleselect="true" readonly="true" selectedIndexes="1" %}
 
     </div>
     <div class="block-action readonly">
