--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -36,7 +36,7 @@
     </li>
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">
-        {% include components/selector.html selectorData=",,,395415"  readonly="true" expanded="true"  selectedIndexes="1" %}
+        {% include components/selector.html selectorData=",,,395415"  readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
@@ -60,7 +60,7 @@
     </li>
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">
-        {% include components/selector.html selectorData=",,,35825" readonly="true" expanded="true"  selectedIndexes="1" %}
+        {% include components/selector.html selectorData=",,,35825" readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
@@ -141,7 +141,7 @@
       </li>
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
-          {% include components/selector.html selectorData=",,,32072" readonly="true" expanded="true"  selectedIndexes="1" %}
+          {% include components/selector.html selectorData=",,,32072" readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
         </div>
       </li>
       <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
@@ -165,7 +165,7 @@
       </li>
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
-          {% include components/selector.html selectorData=",,,32750"  readonly="true" expanded="true"  selectedIndexes="1" %}
+          {% include components/selector.html selectorData=",,,32750"  readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
         </div>
       </li>
       <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
@@ -189,7 +189,7 @@
       </li>
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
-          {% include components/selector.html selectorData=",,,32454"  readonly="true" expanded="true"  selectedIndexes="1" %}
+          {% include components/selector.html selectorData=",,,32454"  readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
         </div>
       </li>
       <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
@@ -221,7 +221,7 @@
     </li>
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">
-        {% include components/selector.html selectorData=",,,31795" readonly="true" expanded="true"  selectedIndexes="1" %}
+        {% include components/selector.html selectorData=",,,31795" readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
         </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
@@ -245,7 +245,7 @@
     </li>
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">
-        {% include components/selector.html selectorData=",,,161531" readonly="true" expanded="true"  selectedIndexes="1" %}
+        {% include components/selector.html selectorData=",,,161531" readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
@@ -269,7 +269,7 @@
     </li>
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">
-        {% include components/selector.html selectorData=",,,283377" readonly="true" expanded="true"  selectedIndexes="1" %}
+        {% include components/selector.html selectorData=",,,283377" readonly="true" singleselect="true" expanded="true"  selectedIndexes="1" %}
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
