Added more readonly configurations

--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -55,7 +55,7 @@
               <li class="itemBox__cell">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
-                    {% include components/selector.html selectorData=",,,next 2 weeks (12/03/18-25/03/18)" expanded="true" selectedIndexes="1" %}
+                    {% include components/selector.html selectorData=",,,next 2 weeks (12/03/18-25/03/18)" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
                   </div>
                 </div>
@@ -71,7 +71,7 @@
               <li class="itemBox__cell">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
-                    {% include components/selector.html selectorData=",,,19/03/18-20/03/18" expanded="true" selectedIndexes="1" %}
+                    {% include components/selector.html selectorData=",,,19/03/18-20/03/18" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
                   </div>
                 </div>
               </li>
@@ -108,7 +108,7 @@
               <li class="itemBox__cell">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
-                    {% include components/selector.html selectorData=",,,today" expanded="true" selectedIndexes="1" %}
+                    {% include components/selector.html selectorData=",,,today" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
                   </div>
                 </div>
@@ -124,7 +124,7 @@
               <li class="itemBox__cell">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
-                    {% include components/selector.html selectorData=",,,18/04/18" expanded="true" selectedIndexes="1" %}
+                    {% include components/selector.html selectorData=",,,18/04/18" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
                   </div>
                 </div>
@@ -175,7 +175,7 @@
               <div class="itemBox__value">
 
                 {% include blocks/popup/selector-include-exclude.html selected="exclude"%}
-                {% include components/selector.html selectorData=",,,today" expanded="true" selectedIndexes="1" %}
+                {% include components/selector.html selectorData=",,,today" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
               </div>
             </div>
           </li>
@@ -251,7 +251,7 @@
               <div class="itemBox__value">
 
                 {% include blocks/popup/selector-include-exclude.html selected="include"%}
-                {% include components/selector.html selectorData=",,,19/03/18-20/03/18" expanded="true" selectedIndexes="1" %}
+                {% include components/selector.html selectorData=",,,19/03/18-20/03/18" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
               </div>
             </div>
@@ -286,7 +286,7 @@
               <div class="itemBox__value">
 
                 {% include blocks/popup/selector-include-exclude.html selected="include"%}
-                {% include components/selector.html selectorData=",,,next 2 weeks (12/03/18-25/03/18)" expanded="true" selectedIndexes="1" %}
+                {% include components/selector.html selectorData=",,,next 2 weeks (12/03/18-25/03/18)" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
               </div>
             </div>
