--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -22,7 +22,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
-            {% include components/selector.html selectorData=",,Any,Typed keyword" expanded="true" selectedIndexes="1" %}
+            {% include components/selector.html selectorData=",,Any,Typed keyword" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
           </div>
         </div>
@@ -33,7 +33,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
-            {% include components/selector.html selectorData=",,title,Enhance login formula for listly" expanded="true" selectedIndexes="1" %}
+            {% include components/selector.html selectorData=",,title,Enhance login formula for listly" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
           </div>
         </div>
@@ -44,7 +44,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
-            {% include components/selector.html selectorData=",,Assigned to,Nick De Jaeger keyword" expanded="true" selectedIndexes="1" %}
+            {% include components/selector.html selectorData=",,Assigned to,Nick De Jaeger keyword" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
           </div>
         </div>
@@ -55,7 +55,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
-            {% include components/selector.html selectorData=",,Priority,Critical" expanded="true" selectedIndexes="1" %}
+            {% include components/selector.html selectorData=",,Priority,Critical" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
           </div>
         </div>
       </li>
