--- a/_includes/javascript/newSelectedItem--unit.html
+++ b/_includes/javascript/newSelectedItem--unit.html
@@ -1,7 +1,7 @@
 <div class="itemBox__cellInner ${excludeClass} ${colorToggleTriggerInnerClass}">
 
   ${colorToggleHTML}
-  <div class="selector selector--expanded">
+  <div class="selector selector--expanded selector--readonly selector--singleselect">
     <div class="selector__item JS_selectorItem--active selector__item--selected">
       <div class="selector__block">
         ${colorPrefixHTML}
