Added selector configuration examples

--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -222,5 +222,9 @@
       pointer-events: none;
       cursor: default;
     }
+
+    .selector__itemSeperator {
+      background-color: transparent;
+    }
   }
 }
