--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -227,4 +227,10 @@
       background-color: transparent;
     }
   }
+
+  &:not(.selector--expanded) {
+    .selector__itemSeperator {
+      background-color: transparent;
+    }
+  }
 }
