add dark theme and add new header styles in future mockup

--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -1,4 +1,4 @@
-<div class="breadcrumbs breadcrumbs--overflow mx-4">
+<div class="breadcrumbs breadcrumbs--overflow">
   {% for item in site.data.breadcrumbs.items %}
     <div class="breadcrumbs__item JS_breadcrumbs__item">
       <div class="selector">
