--- a/_layouts/future.html
+++ b/_layouts/future.html
@@ -4,7 +4,7 @@
     {% include head.html %}
   </head>
 
-  <body style="background-color: #2C5386;">
+  <body class="theme-dark">
     {{ content }}
 
     {% include foot.html %}
