--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -1,44 +1,48 @@
 <header class="header header--item">
-  <input type="text" value="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END" class="header__inputTitle h2">
-  <div class="header__title">
-    <div class="header__type header__type--bug">
-      <div class="header__label header__label--bug">
-        {% include components/selector.html selectorData=",,Bug," expanded="true"  singleselect="true" readonly="true" selectedIndexes="1" %}
+  <div class="header__inner">
+    <input type="text" value="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END" class="header__inputTitle h2">
+
+    <div class="header__title">
+      <div class="header__type header__type--bug">
+        <div class="header__label header__label--bug">
+          {% include components/selector.html selectorData=",,Bug," expanded="true"  singleselect="true" readonly="true" selectedIndexes="1" %}
+        </div>
+        <span class="header__id">391441</span>
       </div>
-      <span class="header__id">391441</span>
+      <h2 class="truncate">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END<sup>15</sup></h2>
     </div>
-    <h2 class="truncate">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END<sup>15</sup></h2>
-  </div>
-  <div class="header__actions">
-    <div class="block-action JS_share" data-clipboard-text="(1546) Update nav menu (https://tracker.tenforce.com/item/1546)"></div>
-    <div class="block-action disabled"></div>
-    <div class="block-action"><sup></sup></div>
-    <div class="block-action readonly">
-      {% include components/selector.html selectorData=",,,Ongoing" expanded="true"  singleselect="true" readonly="true" selectedIndexes="1" %}
 
-    </div>
-    <div class="block-action readonly">
+    <div class="header__actions">
+      <div class="block-action JS_share" data-clipboard-text="(1546) Update nav menu (https://tracker.tenforce.com/item/1546)"></div>
+      <div class="block-action disabled"></div>
+      <div class="block-action"><sup></sup></div>
+      <div class="block-action readonly">
+        {% include components/selector.html selectorData=",,,Ongoing" expanded="true"  singleselect="true" readonly="true" selectedIndexes="1" %}
 
-      <div class="selector selector--singleselect selector--expanded JS_selector">
-        <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_panels-state-1" panel-name="overview">
-          <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--prefix"></div>
-          </div>
-        </div>
-        <div class="selector__itemSeperator"></div>
-        <div class="selector__item  JS_selectorItem JS_panels-state-2" panel-name="comments-attachments">
-          <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--prefix"><sup>11</sup></div>
-          </div>
-        </div>
-        <div class="selector__itemSeperator"></div>
-        <div class="selector__item JS_selectorItem JS_panels-state-3" panel-name="history">
-          <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--prefix"></div>
-          </div>
-        </div>
       </div>
+      <div class="block-action readonly">
 
+        <div class="selector selector--singleselect selector--expanded JS_selector">
+          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_panels-state-1" panel-name="overview">
+            <div class="selector__block">
+              <div class="selector__blockPart selector__blockPart--prefix"></div>
+            </div>
+          </div>
+          <div class="selector__itemSeperator"></div>
+          <div class="selector__item  JS_selectorItem JS_panels-state-2" panel-name="comments-attachments">
+            <div class="selector__block">
+              <div class="selector__blockPart selector__blockPart--prefix"><sup>11</sup></div>
+            </div>
+          </div>
+          <div class="selector__itemSeperator"></div>
+          <div class="selector__item JS_selectorItem JS_panels-state-3" panel-name="history">
+            <div class="selector__block">
+              <div class="selector__blockPart selector__blockPart--prefix"></div>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
 </header>
