--- a/_includes/blocks/item-main.html
+++ b/_includes/blocks/item-main.html
@@ -1,11 +1,13 @@
     <header class="header header--item">
-      <div class="header__title">
-        <h3 class="truncate">Set-up request</h3>
-      </div>
+      <div class="header__inner">
+        <div class="header__title">
+          <h3 class="truncate">Set-up request</h3>
+        </div>
 
-      <div class="header__actions">
-          <button class="btn btn--drop">Reject</button>
-          <button class="btn btn--go">Create</button>
+        <div class="header__actions">
+            <button class="btn btn--drop">Reject</button>
+            <button class="btn btn--go">Create</button>
+        </div>
       </div>
     </header>
 
