--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -70,7 +70,7 @@
   &--naked {
     background-color: transparent;
     text-decoration: underline;
-    padding: 5px 0;
+    padding: 5px 10px;
     box-shadow: none;
 
     &:hover {
