Replaced two buttons with component

--- a/_includes/blocks/item-main.html
+++ b/_includes/blocks/item-main.html
@@ -5,8 +5,8 @@
         </div>
 
         <div class="header__actions">
-            <button class="btn btn--drop">Reject</button>
-            <button class="btn btn--go">Create</button>
+            {% include components/button.html title="Reject" drop="true"%}
+            {% include components/button.html title="Create" go="true"%}
         </div>
       </div>
     </header>
